Table DOM manipulations that require reflow do not always trigger reflow https://bugs.webkit.org/show_bug.cgi?id=280852

Reviewed by Antti Koivisto.

When going from fixed to auto table layout, cell's preferred widths need to be set back to dirty
as fixed layout cleans without computing them (there's some reason for that, see FixedTableLayout::calcWidthArray).

* LayoutTests/fast/table/incorrect-preferred-widths-when-going-from-fixed-to-auto-expected.html: Added.
* LayoutTests/fast/table/incorrect-preferred-widths-when-going-from-fixed-to-auto.html: Added.
* Source/WebCore/rendering/RenderTable.cpp:
(WebCore::RenderTable::styleDidChange):

Canonical link: https://commits.webkit.org/284698@main